--- a/cfu-data-types.ipynb
+++ b/cfu-data-types.ipynb
@@ -49,11 +49,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter your name : Camille\n",
+      "Please enter your age : 34\n",
+      "Please enter your adress : PAris 11\n",
+      "Please enter your salary : 2000\n",
+      "Please enter your expenses : 1650\n",
+      "Camille, who is 34 years old, and lives in PAris 11 has 350 € left from her salary after expenses. It is is not enought that she has more than 350 left.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "name = input('Please enter your name : ')\n",
+    "age = int(input('Please enter your age : '))\n",
+    "address = input('Please enter your adress : ')\n",
+    "salary = int(input('Please enter your salary : '))\n",
+    "expenses = int(input('Please enter your expenses : '))\n",
+    "money = round(salary - expenses,1)\n",
+    "is_salary_ok = 'is a good salary' if money >500 else 'is not enought'\n",
+    "        \n",
+    "print (f'{name}, who is {age} years old, and lives in {address} has {money} € left from her salary after expenses. It is {is_salary_ok} that she has more than {money} left.')\n"
    ]
   },
   {
@@ -85,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,12 +123,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "some say the world will end in fire,\n",
+      "some say in ice.\n",
+      "from what i’ve tasted of desire\n",
+      "i hold with those who favor fire.\n",
+      "but if it had to perish twice,\n",
+      "i think i know enough of hate\n",
+      "to say that for destruction ice\n",
+      "is also great\n",
+      "and would suffice\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_poem = poem.lower()\n",
+    "new_poem = new_poem.strip(',')\n",
+    "new_poem = new_poem.strip('.')\n",
+    "print(new_poem)\n",
+    "# new_one = new_poem + ' python is awesome!'\n",
+    "# print(len(new_one))\n",
+    "# poem_list = new_one.split(' ')\n",
+    "# print(poem_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -126,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
